fixed spacing on nav, finished project

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -40,4 +40,5 @@ a {
 
 ul {
   list-style: none;
+  line-height: 32px;
 }
